config-and-policy/namespaces/payments-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments-app
  labels:
    cost-center: istio.anthos-config-management-demo.com
