config-and-policy/namespaces/payments-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payments-app
  template:
    metadata:
      labels:
        app: payments-app
    spec:
      containers:
      - name: httpd
        image: httpd:alpine
        ports:
        - containerPort: 80
