config-and-policy/namespaces/payments-app/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-app-service
spec:
  type: NodePort
  selector:
    app: payments-app
  ports:
  - protocol: TCP
    port: 60001
    targetPort: 80
